Kata 3 and 4  solved!