@@ -8,6 +8,9 @@ import util.DataUtil;
 
 import java.util.List;
 import java.util.Map;
+import java.util.function.Predicate;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 /*
     Goal: Retrieve id, title, and a 150x200 box art url for every video
@@ -18,6 +21,19 @@ public class Kata4 {
     public static List<Map> execute() {
         List<MovieList> movieLists = DataUtil.getMovieLists();
 
-        return ImmutableList.of(ImmutableMap.of("id", 5, "title", "Bad Boys", "boxart", new BoxArt(150, 200, "url")));
+        /*return ImmutableList.of(ImmutableMap.of("id", 5, "title", "Bad Boys", "boxart", new BoxArt(150, 200, "url")));*/
+        return movieLists
+                .stream()
+                .flatMap(m -> m.getVideos().stream())
+                .map(m -> Map.of("id", m.getId(), "title", m.getTitle(), "boxart", m.getBoxarts()
+                        .stream()
+                        .filter(box -> box.getWidth() == 150 && box.getHeight() == 200)
+                        .findFirst()
+                        .orElseThrow()
+                ))
+                .collect(Collectors.toList());
+
+
+
     }
 }
